--- a/demo/index.html
+++ b/demo/index.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta name="format-detection" content="telephone=no,email=no" />
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
+  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
   <meta charset="utf-8" />
   <title>Lopo</title>
 </head>
 
 <body>
-  <div id="app" />
+  <div id="app"></div>
 </body>
 
 </html>
